--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "dojo-blog",
+  "name": "phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "express": "^4.17.2",
     "mssql": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
